<resources>
    <string name="app_name">TuOpinión</string>
    <string name="title_activity_opinions_maps">Map</string>
    <string name="title_name">Name</string>
    <string name="name_hint">Enter your name…</string>
    <string name="title_surname">Surname</string>
    <string name="surname_hint">Enter your surname…</string>
    <string name="title_phone_number">Phone number</string>
    <string name="hint_phone_number">Enter your phone number…</string>
    <string name="title_gender">Gender</string>
    <string name="male_radio_button">Male</string>
    <string name="female_radio_button">Female</string>
    <string name="other_radio_button">Other</string>
    <string name="age_title">Age</string>
    <string name="title_age">Age</string>
    <string name="hint_age">Enter your age..</string>
    <string name="button_save">Save</string>
    <string name="register">register</string>
    <string name="sign_in">sign in</string>
    <string name="position">Current Position</string>
    <string name="permission_title">Location Permission Needed</string>
    <string name="permission_msg">This app needs the Location permission, please accept to use location functionality</string>
    <string name="permission_denied">permission denied</string>
    <string name="hint_username">Enter your username</string>
    <string name="hint_password">Enter your password</string>
    <string name="login_title">Tu opinión</string>
    <string name="description_hint">Enter location description..</string>
    <string name="location_name_hint">Enter location name..</string>
    <string name="title_description">Description</string>
    <string name="button_comment">Comment</string>
    <string name="comment">Comment</string>
    <string name="comment_hint">Enter your comment here..</string>


</resources>
